// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HintWrapper /> should render a basic hint wrapper 1`] = `
<styled.span
  data-component-type="hint_wrapper"
>
  <Tooltip
    effect="solid"
    iconColour="#424F5C"
    message="Never trust a cat"
    place="top"
    withIcon={false}
  >
    Hover me for a tip :)
  </Tooltip>
</styled.span>
`;

exports[`<HintWrapper /> should render a hint wrapper around a brick 1`] = `
<styled.span
  data-component-type="hint_wrapper"
>
  <Tooltip
    effect="solid"
    iconColour="#424F5C"
    message="Never trust a cat"
    place="top"
    withIcon={false}
  >
    <Brick
      color="neutral"
      typographyType="body"
    >
      Hover me for a tip :)
    </Brick>
  </Tooltip>
</styled.span>
`;

exports[`<HintWrapper /> should render a hint wrapper with a JSX Element for the hint content 1`] = `
<styled.span
  data-component-type="hint_wrapper"
>
  <Tooltip
    effect="solid"
    iconColour="#424F5C"
    message={
      <div>
        Never trust a cat
      </div>
    }
    place="top"
    withIcon={false}
  >
    Hover me for a tip :)
  </Tooltip>
</styled.span>
`;

exports[`<HintWrapper /> should render a popover hint wrapper 1`] = `
<TooltipPopover
  toggleComponent={[Function]}
  variant="neutral"
>
  Never trust a cat
</TooltipPopover>
`;
